# speedometer

./: .gitignore  Cargo.toml  README.md  io.github.nico359.speedometer.json  meson.build
data/: io.github.nico359.speedometer.desktop.in  io.github.nico359.speedometer.gschema.xml  io.github.nico359.speedometer.metainfo.xml.in  io.github.nico359.speedometer.service.in  meson.build
data/icons/: meson.build
po/: POTFILES.in  meson.build
src/: accelerometer.rs  application.rs  config.rs  imu.rs  location.rs  main.rs  meson.build  speedometer.gresource.xml  window.rs  window.ui
