[package]
name = "speedometer"
version = "0.1.0"
edition = "2021"

[dependencies]
gettext-rs = { version = "0.7", features = ["gettext-system"] }
gtk = { version = "0.9", package = "gtk4", features = ["gnome_47"] }
ashpd = { version = "0.13", default-features = false, features = ["tokio", "location"] }
async-channel = "2"
tokio = { version = "1", features = ["rt", "macros"] }
futures-util = "0.3"

[dependencies.adw]
package = "libadwaita"
version = "0.7"
features = ["v1_6"]

[profile.release]
strip = true
lto = true
opt-level = "s"
